# docx-plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.md  ROADMAP.md  SPEC.md  issues.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: API.md  ARCHITECTURE.md  SKILLS.md  TEST_GAPS.md  cli.md  index.md
docs/reference/: bookmarks-anchor.md  bookmarks-crossref.md  bookmarks-read.md  bookmarks-registry.md  comments-anchor.md  comments-read.md  comments-registry.md  controls-builder.md  controls-read.md  core-errors.md  core-ids.md  core-ns.md  core-oxml.md  core-parts.md  fields-simple.md  fields-update.md  layout-borders.md  layout-breaks.md  layout-columns.md  layout-line-numbering.md  layout-settings.md  notes-read.md  notes-registry.md  notes-write.md  protection-document.md  publishing-captions.md  publishing-figures.md  publishing-toc.md  revisions-accept.md  revisions-mark.md  revisions-read.md  revisions-registry.md  revisions-settings.md  styles-inspect.md  styles-modify.md  styles-theme.md
docx_plus/: __init__.py
docx_plus/_testing/: __init__.py  ooxml_asserts.py
docx_plus/bookmarks/: __init__.py  anchor.py  crossref.py  read.py  registry.py
docx_plus/cli/: __init__.py  __main__.py  _io.py  controls.py  inspect.py  restyle.py
docx_plus/comments/: __init__.py  anchor.py  read.py  registry.py
docx_plus/controls/: __init__.py  builder.py  read.py
docx_plus/core/: __init__.py  errors.py  ids.py  ns.py  oxml.py  parts.py
docx_plus/examples/: __init__.py  add_comments.py  bookmarks_and_xrefs.py  build_form.py  footnotes_and_endnotes.py  inspect_document.py  multi_column_layout.py  populate_form.py  publishing_layout.py  restyle_existing.py  track_changes.py
docx_plus/fields/: __init__.py  simple.py  update.py
docx_plus/layout/: __init__.py  borders.py  breaks.py  columns.py  line_numbering.py  settings.py
docx_plus/notes/: __init__.py  read.py  registry.py  write.py
docx_plus/protection/: __init__.py  document.py
docx_plus/publishing/: __init__.py  _validate.py  captions.py  figures.py  toc.py
docx_plus/revisions/: __init__.py  accept.py  mark.py  read.py  registry.py  settings.py
docx_plus/styles/: __init__.py  inspect.py  modify.py  theme.py
skills/docx-plus/: SKILL.md
skills/docx-plus/reference/: cli.md  comments.md  forms.md  layout.md  publishing.md  revisions.md  styles.md
tests/: conftest.py  test_bookmarks.py  test_cascade_numbering.py  test_cascade_provenance.py  test_cascade_run_target.py  test_cascade_toggles.py  test_cli.py  test_comments.py  test_controls_builder.py  test_controls_read.py  test_core_ids.py  test_core_ns.py  test_core_oxml.py  test_core_parts.py  test_crossrefs.py  test_examples_libreoffice.py  test_examples_smoke.py  test_fields.py  test_import_invariant.py  test_integration_smoke.py  test_layout_borders.py  test_layout_breaks.py  test_layout_columns.py  test_layout_even_odd.py  test_layout_line_numbering.py  test_notes.py  test_protection.py  test_publishing_captions.py  test_publishing_figures.py  test_publishing_toc.py  test_revisions.py  test_smoke.py  test_styles_inspect.py  test_styles_modify.py  test_styles_table_conditional.py  test_styles_theme.py  test_theme_edge_cases.py
tests/fixtures/: build_fixtures.py
tests/fixtures/word_samples/: README.md  sample-1.docx  sample-2.docx
