[project]
name = "docx_plus"
version = "0.2.1"
description = "OOXML-level extensions for python-docx: style cascade, controls, fields, comments, layout, bookmarks, notes, publishing."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Tom Villani, PhD", email = "tomrhobus@gmail.com" }]
keywords = ["docx", "ooxml", "word", "python-docx", "styles", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "python-docx>=1.0.0",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/thomas-villani/docx-plus"
Documentation = "https://thomas-villani.github.io/docx-plus/"
Repository = "https://github.com/thomas-villani/docx-plus"
Issues = "https://github.com/thomas-villani/docx-plus/issues"

[project.scripts]
docx-plus = "docx_plus.cli:main"

[project.optional-dependencies]
# Single source of truth for dev deps. `uv sync --extra dev` and
# `pip install -e ".[dev]"` both resolve to this list; the older
# `[tool.uv] dev-dependencies` table is deliberately not duplicated so
# the two can't drift.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "lxml-stubs>=0.5",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Examples ship in the wheel so users can run `python -m docx_plus.examples.<name>`
# and so tests/test_examples_smoke.py can import them without a path dance.
packages = ["docx_plus"]

[tool.hatch.build.targets.sdist]
# Hatchling's default sdist includes everything not gitignored. Explicit
# include keeps the tarball lean — dev-only files at repo root
# (IMPLEMENTATION.md, notes*.md, mkdocs.yml, uv.lock, etc.) are filtered out.
include = [
    "docx_plus/",
    "tests/",
    "README.md",
    "LICENSE",
    "SPEC.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["docx_plus"]
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["docx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["tests/fixtures/*.docx"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "D"]
ignore = [
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"docx_plus/_testing/**" = ["D"]
"docx_plus/examples/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_libreoffice: smoke tests that need `soffice` on PATH",
]
addopts = "-ra"

[tool.coverage.run]
source = ["docx_plus"]
omit = [
    "docx_plus/_testing/*",
    "docx_plus/examples/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.bumpversion]
# `bump-my-version bump {major|minor|patch}` updates the two version
# sources below, then commits and tags. CHANGELOG.md is maintained by hand.
# Run with --dry-run -v first to preview; the tree must be clean to bump.
current_version = "0.2.1"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = false
commit = true
message = "chore(release): bump version {current_version} -> {new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "chore(release): v{new_version}"
sign_tags = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docx_plus/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
